--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ dependencies {
 
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+
+    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
 }
 
 test {
