--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,12 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 
+    compileOnly 'org.projectlombok:lombok:1.18.30' // 롬복의 최신 버전으로 변경하세요
+    annotationProcessor 'org.projectlombok:lombok:1.18.30' // 롬복의 최신 버전으로 변경하세요
+
+    testCompileOnly 'org.projectlombok:lombok:1.18.30' // 롬복의 최신 버전으로 변경하세요
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30' // 롬복의 최신 버전으로 변경하세요
+
     implementation 'com.googlecode.json-simple:json-simple:1.1.1'
 }
 
