--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,9 @@ dependencies {
     testCompileOnly 'org.projectlombok:lombok:1.18.30' // 롬복의 최신 버전으로 변경하세요
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.30' // 롬복의 최신 버전으로 변경하세요
 
+    // https://mvnrepository.com/artifact/mysql/mysql-connector-java
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.33'
+
     implementation 'com.googlecode.json-simple:json-simple:1.1.1'
 }
 
